# mixtape

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  codecov.yml
.cargo-husky/hooks/: pre-commit
.claude/agents/: mixtape-test-runner.md
.github/workflows/: ci.yml  release.yml
cargo-mixtape/: Cargo.toml
cargo-mixtape/src/: config.rs  deploy.rs  main.rs
docs/: skills-strategy.md
mixtape/: Cargo.toml
mixtape-acp/: Cargo.toml
mixtape-acp/examples/: echo_agent.rs  echo_agent_bedrock.rs
mixtape-acp/src/: adapter.rs  builder.rs  builder_tests.rs  convert.rs  convert_tests.rs  error.rs  error_tests.rs  lib.rs  permission.rs  permission_tests.rs  session.rs  session_tests.rs  types.rs
mixtape-anthropic-sdk/: Cargo.toml  README.md
mixtape-anthropic-sdk/src/: batch.rs  client.rs  error.rs  lib.rs  messages.rs  streaming.rs  tokens.rs  tools.rs
mixtape-cli/: Cargo.toml  README.md
mixtape-cli/src/: error.rs  lib.rs
mixtape-cli/src/repl/: approval.rs  commands.rs  core.rs  formatter.rs  input.rs  mod.rs  presentation.rs  spinner.rs  status.rs
mixtape-cli/src/session/: schema.sql  store.rs
mixtape-core/: Cargo.toml  Makefile
mixtape-core/examples/: hello_world.rs  hello_world_anthropic.rs  hierarchical_agents.rs  interactive_agent.rs  interactive_mcp_agent.rs  interactive_mcp_agent_anthropic.rs  lorem_picsum_image.rs  model_verification.rs  multi_turn.rs  multi_turn_anthropic.rs  parallel_tools.rs  parallel_tools_anthropic.rs  permissions.rs  streaming.rs  streaming_anthropic.rs  tool_search.rs  weather_tool.rs  weather_tool_anthropic.rs
mixtape-core/src/: conversation.rs  error.rs  events.rs  lib.rs  model.rs  presentation.rs  session.rs  test_utils.rs  tokenizer.rs  tool.rs  types.rs
mixtape-core/src/agent/: builder.rs  context.rs  helpers.rs  mcp.rs  mod.rs  permission.rs  run.rs  session.rs  tools.rs  types.rs
mixtape-core/src/mcp/: mod.rs  tool_adapter.rs  transport.rs
mixtape-core/src/models/: ai21.rs  claude.rs  cohere.rs  deepseek.rs  glm.rs  google.rs  kimi.rs  llama.rs  minimax.rs  mistral.rs  mod.rs  nova.rs  nvidia.rs  openai.rs  qwen.rs  titan.rs  writer.rs
mixtape-core/src/permission/: authorizer.rs  grant.rs  mod.rs  store.rs
mixtape-core/src/provider/: mod.rs  retry.rs
mixtape-core/src/provider/anthropic/: conversion.rs  mod.rs
mixtape-core/src/provider/bedrock/: conversion.rs  mod.rs
mixtape-core/tests/: agent_tests.rs  agent_types_tests.rs  events_tests.rs  mcp_client_tests.rs  model_tests.rs  session_tests.rs  tool_tests.rs
mixtape-core/tests/common/: mock_mcp_server.rs  mod.rs
mixtape-server/: Cargo.toml  Dockerfile.agentcore  Makefile  agentcore-stack.yaml  deploy-agentcore.sh
mixtape-server/examples/: agentcore_server.rs  basic_server.rs
mixtape-server/src/: error.rs  error_tests.rs  lib.rs  router.rs  router_tests.rs  state.rs
mixtape-server/src/agentcore/: convert.rs  convert_tests.rs  events.rs  events_tests.rs  handler.rs  handler_tests.rs  mod.rs
mixtape-server/src/agui/: convert.rs  convert_tests.rs  events.rs  events_tests.rs  handler.rs  handler_tests.rs  mod.rs
mixtape-server/tests/: integration_tests.rs
mixtape-tools/: Cargo.toml  README.md
mixtape-tools/src/: lib.rs
mixtape-tools/src/aws/: mod.rs  use_aws.rs
mixtape-tools/src/edit/: edit_block.rs  mod.rs
mixtape-tools/src/fetch/: fetch_tool.rs  mod.rs
mixtape-tools/src/filesystem/: create_directory.rs  file_info.rs  list_directory.rs  mod.rs  move_file.rs  read_file.rs  read_multiple_files.rs  write_file.rs
mixtape-tools/src/process/: force_terminate.rs  interact_with_process.rs  kill_process.rs  list_processes.rs  list_sessions.rs  mod.rs  read_process_output.rs  session_manager.rs  start_process.rs
mixtape-tools/src/search/: mod.rs  search_tool.rs
mixtape-tools/src/sqlite/: README.md  config.rs  configured.rs  error.rs  manager.rs  mod.rs  sql_parser.rs  test_utils.rs  types.rs
mixtape-tools/src/sqlite/database/: close.rs  info.rs  list.rs  mod.rs  open.rs
mixtape-tools/src/sqlite/maintenance/: backup.rs  export_schema.rs  mod.rs  vacuum.rs
mixtape-tools/src/sqlite/migration/: add.rs  export.rs  get.rs  import.rs  list.rs  mod.rs  remove.rs  run.rs  types.rs
mixtape-tools/src/sqlite/query/: bulk_insert.rs  mod.rs  read.rs  schema.rs  write.rs
mixtape-tools/src/sqlite/table/: describe.rs  list.rs  mod.rs
mixtape-tools/src/sqlite/transaction/: begin.rs  commit.rs  mod.rs  rollback.rs
mixtape-tools/tests/: integration_tests.rs
mixtape/examples/: hello_world.rs  hello_world_anthropic.rs  hierarchical_agents.rs  interactive_agent.rs  interactive_mcp_agent.rs  interactive_mcp_agent_anthropic.rs  lorem_picsum_image.rs  model_verification.rs  multi_turn.rs  multi_turn_anthropic.rs  parallel_tools.rs  parallel_tools_anthropic.rs  permissions.rs  streaming.rs  streaming_anthropic.rs  weather_tool.rs  weather_tool_anthropic.rs
mixtape/src/: conversation.rs  error.rs  events.rs  lib.rs  session.rs  tool.rs
mixtape/src/agent/: builder.rs  mcp.rs  mod.rs  permission.rs  run.rs  streaming.rs  types.rs
mixtape/src/mcp/: client.rs  config.rs  mod.rs  transport.rs
mixtape/src/models/: cohere.rs  deepseek.rs  google.rs  llama.rs  mistral.rs
mixtape/src/permission/: authorizer.rs  grant.rs  mod.rs
mixtape/src/provider/anthropic/: mod.rs
mixtape/src/provider/bedrock/: conversion.rs  mod.rs
mixtape/tests/: agent_tests.rs  agent_types_tests.rs  events_tests.rs  mcp_client_tests.rs  model_tests.rs  session_tests.rs  tool_tests.rs
mixtape/tests/common/: mod.rs
