[workspace]
members = ["mixtape-core", "mixtape-anthropic-sdk", "mixtape-tools", "mixtape-cli"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/adlio/mixtape"

[workspace.dependencies]
# Internal crates
mixtape-core = { version = "0.2.1", path = "./mixtape-core" }
mixtape-anthropic-sdk = { version = "0.2.1", path = "./mixtape-anthropic-sdk" }
mixtape-tools = { path = "./mixtape-tools" }
mixtape-cli = { path = "./mixtape-cli" }

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-test = "0.4"
async-trait = "0.1"
async-stream = "0.3"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Time and IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
reqwest-eventsource = "0.6"

# AWS
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1.59"
aws-sdk-sts = "1.0"
aws-smithy-types = { version = "1.3", features = ["serde-serialize", "serde-deserialize"] }
aws-credential-types = "1.2"
aws-sigv4 = "1.2"
aws-types = "1.3"
aws-smithy-runtime-api = { version = "1.7", features = ["client", "http-1x"] }

# Database
rusqlite = { version = "0", features = ["bundled"] }

# Utilities
base64 = "0.22"
sha2 = "0.10"
glob = "0.3"
dirs = "5.0"
parking_lot = "0.12"
rand = "0.8"
lazy_static = "1.5"
hex = "0.4"
regex = "1.10"
url = "2.5"
http = "1.1"
shellexpand = "3.1"

# MCP
rmcp = { version = "0.11", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }

# CLI
rustyline = "14.0"
crossterm = "0.28"

# Filesystem
ignore = "0.4"
infer = "0.16"
mime_guess = "2.0"

# Web scraping
html2md = "0.2"
robotstxt = "0.3"
readability-rust = "0.1"

# Process management
sysinfo = "0.31"
nix = { version = "0.29", features = ["signal", "process"] }

# String matching
strsim = "0.11"

# Testing
tempfile = "3.14"
wiremock = "0.6"
eventsource-stream = "0.2"
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
