[package]
name = "mixtape-anthropic-sdk"
version = "0.1.0"
edition = "2021"
description = "Minimal Anthropic API client for mixtape"
license = "MIT"

[features]
default = []
# Enable schemars derives for JSON Schema generation
schemars = ["dep:schemars"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
reqwest-eventsource = "0.6"
schemars = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
eventsource-stream = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
