[package]
name = "mixtape-anthropic-sdk"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal Anthropic API client for the mixtape agent framework"
documentation = "https://docs.rs/mixtape-anthropic-sdk"
readme = "README.md"
keywords = ["anthropic", "claude", "llm", "ai", "api"]
categories = ["api-bindings", "asynchronous"]

[features]
default = []
schemars = ["dep:schemars"]

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["stream"] }
reqwest-eventsource.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["sync", "time"] }

[dev-dependencies]
eventsource-stream.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock.workspace = true
