[package]
name = "mixtape-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP server and AG-UI protocol support for the mixtape agent framework"
documentation = "https://docs.rs/mixtape-server"
readme = "README.md"
keywords = ["ai", "agents", "http", "sse", "ag-ui"]
categories = ["web-programming::http-server", "development-tools"]

[features]
default = []
agui = []

[dependencies]
mixtape-core.workspace = true
axum.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tower.workspace = true
tower-http.workspace = true
parking_lot.workspace = true

[dev-dependencies]
tokio-test.workspace = true
cargo-husky.workspace = true
mixtape-core = { workspace = true, features = ["bedrock", "test-utils"] }
axum-test = "16"

[[example]]
name = "basic_server"
required-features = ["agui"]
