[package]
name = "mixtape-tools"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Core framework
mixtape = { path = "../mixtape" }

# Core dependencies
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"          # Async utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"
anyhow = "1.0"
lazy_static = "1.5"      # Static initialization

# Filesystem
ignore = "0.4"           # Gitignore-aware file walking (ripgrep engine)
infer = "0.16"           # Content-based type detection

# HTTP & Web Fetching
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
html2md = "0.2"          # HTML to Markdown conversion
url = "2.5"              # URL parsing
robotstxt = "0.3"        # Google's robots.txt parser (Rust port)
readability-rust = "0.1" # Mozilla Readability port for article extraction

# AWS SDK
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
aws-sigv4 = "1.2"
aws-types = "1.3"
aws-smithy-runtime-api = { version = "1.7", features = ["client", "http-1x"] }
http = "1.1"             # HTTP types for request building

# Process Management
sysinfo = "0.31"         # Cross-platform system info

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

# String Matching
strsim = "0.11"          # Levenshtein distance
regex = "1.10"           # Pattern matching
glob = "0.3"             # Glob pattern matching

# File handling
mime_guess = "2.0"       # MIME type guessing from file extensions
chrono = "0.4"           # Date and time handling

[dev-dependencies]
tempfile = "3.8"         # Temporary files for tests
wiremock = "0.6"         # HTTP mocking for tests

[features]
default = ["filesystem", "process", "edit", "search", "fetch", "aws"]
filesystem = []
process = []
edit = []
search = []
fetch = []
aws = []
