[package]
name = "mixtape"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
session = []
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]
anthropic = ["dep:mixtape-anthropic-sdk", "dep:base64"]
mcp = ["dep:rmcp", "dep:reqwest", "dep:shellexpand"]

[dependencies]
async-stream = "0.3"
async-trait = "0.1"
# Bedrock provider (optional)
aws-config = { version = "1.5", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1.59", optional = true }
aws-smithy-types = { version = "1.3", features = ["serde-serialize", "serde-deserialize"], optional = true }
schemars = "0.8"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
# Permission system
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Anthropic provider (optional)
mixtape-anthropic-sdk = { path = "../mixtape-anthropic-sdk", optional = true }
base64 = { version = "0.22", optional = true }

# MCP support (optional)
# Note: rmcp's "reqwest" feature already uses rustls-tls
rmcp = { version = "0.11", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"], optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
shellexpand = { version = "3.1", optional = true }

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
tokio-test = "0.4"
mixtape-tools = { path = "../mixtape-tools" }
mixtape-cli = { path = "../mixtape-cli" }
aws-sdk-sts = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tempfile = "3.14"

# Test binary for mock MCP server
[[bin]]
name = "mock_mcp_server"
path = "tests/bin/mock_mcp_server.rs"
test = false
bench = false
required-features = ["mcp"]

# Examples
[[example]]
name = "hello_world"
required-features = ["bedrock"]

[[example]]
name = "multi_turn"
required-features = ["bedrock"]

[[example]]
name = "streaming"
required-features = ["bedrock"]

[[example]]
name = "weather_tool"
required-features = ["bedrock"]

[[example]]
name = "interactive_agent"
required-features = ["bedrock", "mcp", "session"]

[[example]]
name = "interactive_mcp_agent"
required-features = ["bedrock", "mcp", "session"]

[[example]]
name = "hierarchical_agents"
required-features = ["bedrock"]

[[example]]
name = "parallel_tools"
required-features = ["bedrock"]

[[example]]
name = "lorem_picsum_image"
required-features = ["bedrock"]

[[example]]
name = "model_verification"
required-features = ["bedrock"]

[[example]]
name = "hello_world_anthropic"
required-features = ["anthropic"]

[[example]]
name = "multi_turn_anthropic"
required-features = ["anthropic"]

[[example]]
name = "streaming_anthropic"
required-features = ["anthropic"]

[[example]]
name = "weather_tool_anthropic"
required-features = ["anthropic"]

[[example]]
name = "interactive_mcp_agent_anthropic"
required-features = ["anthropic", "mcp", "session"]

[[example]]
name = "parallel_tools_anthropic"
required-features = ["anthropic"]

[[example]]
name = "permissions"
required-features = ["bedrock"]
